--- a/build.gradle
+++ b/build.gradle
@@ -24,8 +24,13 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web-services'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.mariadb.jdbc:mariadb-java-client'
+    implementation 'io.springfox:springfox-boot-starter:3.0.0'
     implementation 'com.h2database:h2'
     compileOnly 'org.projectlombok:lombok'
+    implementation group: 'org.apache.poi', name: 'poi', version: '3.11'
+    implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '3.11'
+    implementation group: 'commons-io', name: 'commons-io', version: '2.4'
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
