--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     implementation group: 'org.apache.poi', name: 'poi', version: '3.11'
     implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '3.11'
     implementation group: 'commons-io', name: 'commons-io', version: '2.4'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-devtools', version: '2.5.1'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
