--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     implementation 'org.mariadb.jdbc:mariadb-java-client'
     implementation 'io.springfox:springfox-boot-starter:3.0.0'
     implementation 'com.h2database:h2'
+    implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '3.0.0'
     compileOnly 'org.projectlombok:lombok'
     implementation group: 'org.apache.poi', name: 'poi', version: '3.11'
     implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '3.11'
