--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web-services'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.mariadb.jdbc:mariadb-java-client'
+    implementation 'org.springframework.session:spring-session-jdbc'
     implementation 'io.springfox:springfox-boot-starter:3.0.0'
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     implementation 'com.h2database:h2'
     implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '3.0.0'
     compileOnly 'org.projectlombok:lombok'
