--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,6 +21,10 @@ spring:
   mustache:
     cache: false
   profiles:
-    include: oauth
+    group:
+      "real" : "real,real-db,oauth"
+      "real1" : "real1,real-db,oauth"
+      "real2" : "real2,real-db,oauth"
+
   session:
     store-type: jdbc
