--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group = 'com.collection.words'
-version = '1.0.5-SNAPSHOT'
+version = '1.0.1-SNAPSHOT'+new Date().format("yyyyMMddHHmmss")
 sourceCompatibility = '8'
 
 configurations {
