20211022 관리자 페이지 추가 암기완료시 버튼색 변경

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,6 +25,7 @@ spring:
       "real" : "real,real-db,oauth"
       "real1" : "real1,real-db,oauth"
       "real2" : "real2,real-db,oauth"
+    include: oauth
 
   session:
     store-type: jdbc
